# cfmstg

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  submit_train.sh  train.py  train_lightning.py
cfmstg/: config.py
cfmstg/data/: datamodule.py  dataset.py
cfmstg/model/: cfmstg.py  diffstg.py
cfmstg/model/submodels/: ugnet.py
cfmstg/task/: forecasting.py
cfmstg/utils/: logging.py  metrics.py
config/: train.yaml  train_cfmstg.yaml  train_diffstg_optimal.yaml
config/data/: pems.yaml  pems_optimal.yaml
config/hydra/launcher/: slurm.yaml
config/model/: cmfstg.yaml  diffstg.yaml  diffstg_optimal.yaml
config/task/: forecasting.yaml
fmstg/: config.py  train.py
fmstg/data/: datamodule.py  dataset.py  utils.py
fmstg/model/: diffstg.py
fmstg/model/submodels/: ugnet.py
fmstg/task/: forecasting.py
fmstg/utils/: common.py  graph_prcs.py  seed.py
