[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Kristiyan Sakalyan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
easydict = "^1.13"
nni = "^3.0"
networkx = {extras = ["default"], version = "^3.3"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
networkx = "^3.3"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
